--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Larisa Loke"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD Student at Northwestern University, interested in assistive and rehabilitation robotics, "
   location         : "Evanston, IL, USA"
   employer         :
