edited date-role format on cv page for consistency

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Larisa Loke"
   avatar           : "profile.jpg"
-  bio              : "PhD Student at Northwestern University, interested in assistive and rehabilitation robotics, "
-  location         : "Evanston, IL, USA"
+  bio              : "Ph.D. Student at Northwestern University, interested in assistive and rehabilitation robotics"
+  location         : "Chicago, IL, USA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
